--- a/LetsGoal/client/capstone-lets-goal/package.json
+++ b/LetsGoal/client/capstone-lets-goal/package.json
@@ -2,12 +2,12 @@
   "name": "capstone-lets-goal",
   "proxy": "https://localhost:5001",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "date-fns": "^2.15.0",
     "firebase": "^7.17.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
